[package]
name = "system-memory"
version = "0.1.0"
edition = "2021"
authors = ["Venus Xeon-Blonde"]
descrition = "A small crate to get info/stats on the host's memory"

[dependencies]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    # Use the system information API to get info about the host's memory.
    "Win32_System_SystemInformation",
    # Use the debug API to get errors when this errors.
    "Win32_System_Diagnostics_Debug"
]


[build-dependencies]
rustc_version = "0.4.0"

