[package]
name = "system-memory"
version = "0.1.7"
edition = "2021"
authors = ["Venus Xeon-Blonde"]
description = "A small crate to get info/stats on the host's memory"
license = "MIT"
documentation = "https://docs.rs/system-memory"
repository = "https://github.com/vcfxb/system-memory"

[dependencies]
errno = { version = "0.3.12", default-features = false }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    # Use the system information API to get info about the host's memory.
    "Win32_System_SystemInformation",
]

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2.172"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.mach]
version = "0.3"

[build-dependencies]
rustc_version = "0.4.1"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "arm-unknown-linux-gnueabi",
    "arm-unknown-linux-gnueabihf",
    "arm-unknown-linux-musleabi",
    "arm-unknown-linux-musleabihf",
    "armv5te-unknown-linux-gnueabi",
    "armv5te-unknown-linux-musleabi",
    "armv7-unknown-linux-gnueabihf",
    "armv7-unknown-linux-musleabihf",
    "i586-pc-windows-msvc",
    "i586-unknown-linux-gnu",
    "i586-unknown-linux-musl",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "loongarch64-unknown-linux-gnu",
    "powerpc-unknown-linux-gnu",
    "powerpc64le-unknown-linux-gnu",
    "riscv64gc-unknown-linux-gnu",
    "s390x-unknown-linux-gnu",
    "sparc64-unknown-linux-gnu",
    "thumbv7neon-unknown-linux-gnueabihf",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnux32",
    "x86_64-unknown-linux-musl",
]
